Add tweets.html with embedded tweet and add link between index.html and tweets.html

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -18,7 +18,7 @@
 
     <p>In the near future, I plan to add more projects and improve this portfolio. Stay tuned!</p>
     <p>Feel free to connect with me through my social media or email, which I'll add soon.</p>
-
+    <p><a href="tweets.html">See my Tweets!</a></p>
     <div class="clickable-image">
         <a href="https://alx-institute.com" target="_blank" rel="noopener noreferrer">
             <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="300" />
