--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -9,21 +9,44 @@
 
 <body>
 
-    <h1>Welcome to My First Portfolio</h1>
-    <h2>About Me</h2>
-    <p>Hello! This is my very first webpage. I'm excited to start sharing my projects and ideas with the world.</p>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
 
-    <h3>My Journey</h3>
-    <p>I recently began learning web development, focusing on HTML, CSS, and JavaScript to build awesome websites.</p>
+    <main>
+        <article>
+            <h1>Welcome to My First Portfolio</h1>
+            <h2>About Me</h2>
+            <p>Hello! This is my very first webpage. I'm excited to start sharing my projects and ideas with the world.
+            </p>
 
-    <p>In the near future, I plan to add more projects and improve this portfolio. Stay tuned!</p>
-    <p>Feel free to connect with me through my social media or email, which I'll add soon.</p>
-    <p><a href="tweets.html">See my Tweets!</a></p>
-    <div class="clickable-image">
-        <a href="https://alx-institute.com" target="_blank" rel="noopener noreferrer">
-            <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="300" />
-        </a>
-    </div>
+            <h3>My Journey</h3>
+            <p>I recently began learning web development, focusing on HTML, CSS, and JavaScript to build awesome
+                websites.</p>
+
+            <p>In the near future, I plan to add more projects and improve this portfolio. Stay tuned!</p>
+            <p>Feel free to connect with me through my social media or email, which I'll add soon.</p>
+
+            <p><a href="tweets.html">See my Tweets!</a></p>
+
+            <div class="clickable-image">
+                <a href="https://alx-institute.com" target="_blank" rel="noopener noreferrer">
+                    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="300" />
+                </a>
+            </div>
+        </article>
+
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+
+    <footer>
+        <p>Made by YOUR NAME - <a href="https://github.com/YOUR_GITHUB" target="_blank">here</a>.</p>
+    </footer>
 
 </body>
 
