--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -10,18 +10,36 @@
 
 <body>
 
-    <h1>My Tweets</h1>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
 
-    <p>Check out this tweet I embedded below!</p>
+    <main>
+        <article>
+            <h1>My Tweets</h1>
+            <p>Check out this tweet I embedded below!</p>
 
-    <!-- Embedded tweet -->
-    <blockquote class="twitter-tweet" data-theme="light">
-        <p lang="en" dir="ltr">Just setting up my Twitter. #myfirstTweet</p>&mdash; Twitter (@Twitter) <a
-            href="https://twitter.com/Twitter/status/20?ref_src=twsrc%5Etfw">March 21, 2006</a>
-    </blockquote>
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <!-- Embedded tweet -->
+            <blockquote class="twitter-tweet" data-theme="light">
+                <p lang="en" dir="ltr">Just setting up my Twitter. #myfirstTweet</p>&mdash; Twitter (@Twitter) <a
+                    href="https://twitter.com/Twitter/status/20?ref_src=twsrc%5Etfw">March 21, 2006</a>
+            </blockquote>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-    <p><a href="index.html">← Back to Homepage</a></p>
+            <p><a href="index.html">← Back to Homepage</a></p>
+        </article>
+
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+
+    <footer>
+        <p>Made by YOUR NAME - <a href="https://github.com/YOUR_GITHUB" target="_blank">here</a>.</p>
+    </footer>
 
 </body>
 
