--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -37,6 +37,42 @@
                     <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="300" />
                 </a>
             </div>
+            <div class="learners-table-container" style="margin-top: 40px;">
+                <h2>Some Learners</h2>
+                <table border="1" cellpadding="8" cellspacing="0"
+                    style="border-collapse: collapse; width: 100%; max-width: 600px;">
+                    <thead style="background-color: #0073e6; color: white;">
+                        <tr>
+                            <th>Name</th>
+                            <th>Age</th>
+                            <th>Country</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>John</td>
+                            <td>25</td>
+                            <td>USA</td>
+                        </tr>
+                        <tr>
+                            <td>Emily</td>
+                            <td>28</td>
+                            <td>Canada</td>
+                        </tr>
+                        <tr>
+                            <td>Michael</td>
+                            <td>32</td>
+                            <td>Australia</td>
+                        </tr>
+                        <tr>
+                            <td>Sophia</td>
+                            <td>21</td>
+                            <td>UK</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
         </article>
 
         <aside>
